# aws-mock

./: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/awsmock/core/: Configuration.h  FileUtils.h  LogStream.h  MetricService.h  MetricServiceTimer.h  MetricSystemCollector.h  ThreadPool.h  Version.h
src/core/src/config/: Configuration.cpp
src/core/src/logging/: LogStream.cpp
src/db/: CMakeLists.txt
src/db/include/awsmock/utils/: ConnectionPool.h
src/dto/: CMakeLists.txt
src/dto/src/cognito/: AdminCreateUserRequest.cpp  AdminCreateUserResponse.cpp
src/dto/src/docker/: Container.cpp  Image.cpp  ListContainerResponse.cpp  ListImageResponse.cpp
src/dto/src/sqs/: GetQueueAttributesRequest.cpp
src/dto/src/transfer/: CreateServerRequest.cpp
src/manager/include/awsmock/controller/: RestService.h
src/manager/src/: main.cpp
src/manager/src/controller/: RestService.cpp
src/service/include/awsmock/service/common/: AbstractServer.h
src/service/include/awsmock/service/gateway/: GatewayHandler.h  GatewayRouter.h  GatewayServer.h
src/service/src/cognito/: CognitoServer.cpp
src/service/src/gateway/: GatewayRouter.cpp  GatewayServer.cpp
